<resources>
    <string name="app_name">2048</string>
    <string name="vitalityExplanation">In order to be able to help you, Endy needs vitality which can be earned by watching a video</string>
    <string name="VitalityTitle">Endy needs your attention!</string>
    <string name="restoreVitalityButton">Restore Vitality</string>
    <string name="skipVitality">Not now</string>
    <string name="warningExhaustion">Looks like Endy is exhausted...</string>
    <string name="highestScoreTitle">Your Highest Score</string>
    <string name="highestScoreNumber">8192</string>
    <string name="currentScoreNumber">2048</string>
    <string name="currentScoreTitle">Current Score</string>
    <string name="maximumVitality">Endy has all the energy in the world!</string>
    <string name="restartGameTitle">Restart game?</string>
    <string name="restartGameDescription">Are you sure you want to restart the game? You will lose all the progress.</string>
    <string name="restartGameTrue">Restart Game</string>
    <string name="restartGameSkip">Continue playing</string>
    <string name="fullVitalityTitle">Endy\'s vitality is fully restored!</string>
    <string name="fullVitalityDescription">You cannot give Endy more vitality. You can only add more vitality if you use Endy at leas once.</string>
    <string name="fullVitalityTrue">Vitality Full</string>
    <string name="fullVitalitySkip">Go to home screen</string>
</resources>
